# gnu-mdk

./: AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac
doc/: Makefile  Makefile.am  Makefile.in  gendocs.sh  gendocs_template  macros.texi  manpage.inc  mix.info  mix.texi  mixal.1  mixal.man  mixsim.1  mixsim.man  version.texi
elisp/: Makefile  Makefile.am  Makefile.in  mix-mode.el
examples/: Makefile  Makefile.am  Makefile.in  easter.mix  load.mix  p.deck  p.dump  p.mix
gnu/: Makefile  Makefile.am  Makefile.in  stdlib.h
lib/: Makefile  Makefile.am  Makefile.in  version.c  version.w
m4/: gnulib-comp.m4
src/: Makefile  Makefile.am  Makefile.in  lex.c  lex.idx  lex.l  lex.lw  lex.tex  mix.h  mix.hw  mix.idx  mix.tex  mixal  mixal.c  mixal.h  mixal.idx  mixal.optab  mixal.tex  mixal.y  mixal.yw  mixasm.h  mixasm.hw  mixasm.idx  mixasm.tex  mixrun  mixsim  mixsim.c  mixsim.h  mixsim.hw  mixsim.idx  mixsim.scn  mixsim.tex  mixsim.w  mixterm.c  mixterm.idx  mixterm.scn  mixterm.tex  mixterm.w  optab.awk  optab.c  (+7 more)
tests/: Makefile  Makefile.am  Makefile.in  atconfig  atlocal  atlocal.in  bref.at  easter.at  fref.at  ifref.at  lbref.at  lfref.at  lref.at  package.m4  testsuite  testsuite.at  version.at
yfmt/: Makefile  Makefile.am  Makefile.in  yfmt  yfmt.c  yfmt.idx  yfmt.scn  yfmt.tex  yfmt.w
